--- a/barbill.css
+++ b/barbill.css
@@ -43,7 +43,34 @@ h1{
     margin: auto;
     margin-top: 20px;
 }
-
+.reservation{
+    background-color: #FFFFFF85;
+    border-radius: 20px;
+    margin: auto;
+    width: 90%;
+}
+.reservation h2{
+    text-align: center;
+    color: #C03832;
+    padding-top: 20px;
+    text-transform: uppercase;
+}
+.reservation h3{
+    text-align: center;
+}
+.location{
+    text-align: center;
+}
+.location img{
+    border: 5px solid #C03832;
+    width: 40%;
+    margin: 0px 10px 0px 10px;
+}
+.location p{
+    display: inline-block;
+    vertical-align: top;
+    width: 45%;
+}
 /* FAQ Lists */
 ul{
     width: 75%;
