--- a/barbill.css
+++ b/barbill.css
@@ -1,15 +1,19 @@
 /* Google font assignment */
-body{
+
+body {
     font-family: "Oswald", sans-serif;
     background-color: #2A53A280;
 }
+
 /* Header  Logo and Navigation Bar Links */
-header{
+
+header {
     background-color: #2A53A2;
     text-align: center;
     width: 100%;
 }
-ul{
+
+ul {
     width: 50%;
     padding: 20px 40px 20px 40px;
     border-radius: 20px;
@@ -17,18 +21,21 @@ ul{
     font-size: 18px;
     margin: 0px 20px 20px 20px;
 }
-#logo{
+
+#logo {
     display: inline-block;
     padding: 20px 30px 20px 0px;
     vertical-align: middle;
 }
-h1{
+
+h1 {
     display: inline-block;
     font-weight: bold;
     color: #FFFFFF;
     text-transform: uppercase;
 }
-.navlink{
+
+.navlink {
     display: inline-block;
     width: 12%;
     padding: 15px;
@@ -40,51 +47,66 @@ h1{
     text-transform: uppercase;
     margin: 0px 10px 25px 0px;
 }
-.navlink:hover{
+
+.navlink:hover {
     background-color: #C03832;
 }
-/* contact form css section (button class free use)*/
-.contactform{
+
+.contactform {
     width: 75%;
-    padding: 40px 40px;
+    padding: 20px 40px 20px 40px;
+    border-radius: 20px;
+    background-color: #FFFFFF85;
+    font-size: 18px;
+    margin: 0px 20px 20px 20px;
 }
+
 /* Home Page */
-#homephoto{
+
+#homephoto, #contactphoto {
     border: 5px solid #C03832;
     display: block;
     margin: auto;
     margin-top: 20px;
 }
-.reservation{
+
+.reservation {
     background-color: #FFFFFF85;
     border-radius: 20px;
     margin: auto;
     width: 90%;
 }
-.reservation h2{
+
+.reservation h2 {
     text-align: center;
     color: #C03832;
     padding-top: 20px;
     text-transform: uppercase;
 }
-.reservation h3{
+
+.reservation h3 {
     text-align: center;
 }
-.location{
+
+.location {
     text-align: center;
 }
-.location img{
+
+.location img {
     border: 5px solid #C03832;
     width: 40%;
     margin: 0px 10px 0px 10px;
 }
-.location p{
+
+.location p {
     display: inline-block;
     vertical-align: top;
     width: 45%;
 }
+
 /* FAQ Lists */
-ul{
+
+ul {
     width: 75%;
     padding: 20px 40px 20px 40px;
     border-radius: 20px;
@@ -92,77 +114,66 @@ ul{
     font-size: 18px;
     margin: 0px 20px 20px 20px;
 }
-.contactform .cf-group{
+
+.contactform .cf-group {
     padding-bottom: 15px;
 }
-.contactform label{
+
+.contactform label {
     display: block;
 }
-.contactform .cf-group input[type="text"], .cf-group textarea{
+
+.contactform .cf-group input[type="text"], .cf-group textarea {
     padding: 4px;
 }
-.button{
+
+.button {
     background-color: #2A53A2;
-    color:#fff;
+    color: #fff;
     font-family: "Oswald", sans-serif;
     text-transform: uppercase;
-    padding:15px;
+    padding: 15px;
     border: none;
-    margin: 0px 10px 25px 0px;
+    margin: 20px 10px 25px 0px;
 }
-.button:hover{
+
+.button:hover {
     background-color: #C03832;
 }
-.FAQ h2{
+
+.FAQ h2 {
     padding-left: 40px;
 }
-/* want the images to float without overlaying the text divs*/
-.FAQimg{
-    width: 50%;
-    padding:15px 15px 15px 40px;
-    border-radius: 20px;
-}
-.FAQimg img{
-    border-radius: 20px;
 
-/* About Page */
-.about{
-    background-color: #FFFFFF85;
-    margin: 20px;
-    border-radius: 20px;
+/*can we merge these two tags?*/
+
+#contactpgheader {
+    padding-left: 40px;
 }
-.about img{
-    float: left;
-    width: 32%;
-    border: 4px solid #C03832;
-    margin: 0px 20px 0px 20px;
+
+.FAQimg img {
+    border: 5px solid #C03832;
+    width: 50%;
+    margin-top: 20px;
+    margin-left: 40px;
 }
-.about h2{
-    display: block;
-    color: #C03832;
+
+.pbottom {
+    margin-top: 500px;
+}
+
+footer {
+    background-color: #2A53A2;
+    color: #FFFFFF;
     text-align: center;
+}
+
+.ourloc h2 {
+    text-transform: uppercase;
     padding-top: 20px;
 }
-.about p{
-    display:inline-block;
-    width: 60%;
-}
 
-.firsttime{
-    background-color: #2A53A2;
-    text-align: center;
-}
-.firsttime p{
-    color: #FFFFFF;
-    padding: 0px 50px 0px 50px;
-}
-
-/* Contact Form */
-#contactform{
-    width: 75%;
-    padding: 20px 40px 20px 40px;
-    border-radius: 20px;
-    background-color: #FFFFFF85;
-    font-size: 18px;
-    margin: 0px 20px 20px 20px;
+.loc {
+    display: inline-block;
+    width: 25%;
 }
