--- a/barbill.css
+++ b/barbill.css
@@ -163,3 +163,23 @@ ul{
 .pbottom{
     margin-top: 500px;
 }
+
+.footer p {
+    width: 30%;
+    display: inline-block;
+}
+
+/* Social Media */
+
+#SMFace, #SMInsta, #SMTwitter{
+    float: left;
+    width: auto;
+    background-color: #FFFFFF85;
+    padding: 30px;
+    margin-left: 25px;
+    border-radius: 10px;
+}
+
+.Social-Media img{
+    border: 5px solid #C03832;
+}
