updated nav bar

--- a/barbill.css
+++ b/barbill.css
@@ -129,7 +129,7 @@ ul{
     margin-top: 20px;
     margin-left: 40px;
 }
-/* About Page 
+
 .about{
     background-color: #FFFFFF85;
     margin: 20px;
@@ -159,7 +159,7 @@ ul{
 .firsttime p{
     color: #FFFFFF;
     padding: 0px 50px 0px 50px;
-}*/
+}
 .pbottom{
     margin-top: 500px;
 }
