final commit for wed

--- a/barbill.css
+++ b/barbill.css
@@ -1,19 +1,19 @@
 /* Google font assignment */
 
-body {
+body{
     font-family: "Oswald", sans-serif;
     background-color: #2A53A280;
 }
 
 /* Header  Logo and Navigation Bar Links */
 
-header {
+header{
     background-color: #2A53A2;
     text-align: center;
     width: 100%;
 }
 
-ul {
+ul{
     width: 50%;
     padding: 20px 40px 20px 40px;
     border-radius: 20px;
@@ -22,20 +22,20 @@ ul {
     margin: 0px 20px 20px 20px;
 }
 
-#logo {
+#logo{
     display: inline-block;
     padding: 20px 30px 20px 0px;
     vertical-align: middle;
 }
 
-h1 {
+h1{
     display: inline-block;
     font-weight: bold;
     color: #FFFFFF;
     text-transform: uppercase;
 }
 
-.navlink {
+.navlink{
     display: inline-block;
     width: 12%;
     padding: 15px;
@@ -48,23 +48,16 @@ h1 {
     margin: 0px 10px 25px 0px;
 }
 
-.navlink:hover {
+.navlink:hover{
     background-color: #C03832;
 }
 
-.contactform {
-    width: 75%;
-    padding: 20px 40px 20px 40px;
-    border-radius: 20px;
-    background-color: #FFFFFF85;
-    font-size: 18px;
-    margin: 0px 20px 20px 20px;
-}
+
 
 /* Home Page */
 
 
-#homephoto, #contactphoto {
+#homephoto, #contactphoto{
 
     border: 5px solid #C03832;
     display: block;
@@ -72,35 +65,35 @@ h1 {
     margin-top: 20px;
 }
 
-.reservation {
+.reservation{
     background-color: #FFFFFF85;
     border-radius: 20px;
     margin: auto;
     width: 90%;
 }
 
-.reservation h2 {
+.reservation h2{
     text-align: center;
     color: #C03832;
     padding-top: 20px;
     text-transform: uppercase;
 }
 
-.reservation h3 {
+.reservation h3{
     text-align: center;
 }
 
-.location {
+.location{
     text-align: center;
 }
 
-.location img {
+.location img{
     border: 5px solid #C03832;
     width: 40%;
     margin: 0px 10px 0px 10px;
 }
 
-.location p {
+.location p{
     display: inline-block;
     vertical-align: top;
     width: 45%;
@@ -108,7 +101,16 @@ h1 {
 
 /* FAQ Lists */
 
-ul {
+ul{
+    width: 75%;
+    padding: 20px 40px 20px 40px;
+    border-radius: 20px;
+    background-color: #FFFFFF85;
+    font-size: 18px;
+    margin: 0px 20px 20px 20px;
+}
+/* contact form */
+.contactform{
     width: 75%;
     padding: 20px 40px 20px 40px;
     border-radius: 20px;
@@ -117,19 +119,19 @@ ul {
     margin: 0px 20px 20px 20px;
 }
 
-.contactform .cf-group {
+.contactform .cf-group{
     padding-bottom: 15px;
 }
 
-.contactform label {
+.contactform label{
     display: block;
 }
 
-.contactform .cf-group input[type="text"], .cf-group textarea {
+.contactform .cf-group input[type="text"], .cf-group textarea{
     padding: 4px;
 }
 
-.button {
+.button{
     background-color: #2A53A2;
     color: #fff;
     font-family: "Oswald", sans-serif;
@@ -139,11 +141,11 @@ ul {
     margin: 20px 10px 25px 0px;
 }
 
-.button:hover {
+.button:hover{
     background-color: #C03832;
 }
 
-.FAQ h2 {
+.FAQ h2{
     padding-left: 40px;
 }
 
@@ -154,34 +156,11 @@ ul {
     margin-top: 20px;
     margin-left: 40px;
 }
-
-.about{
-    background-color: #FFFFFF85;
-    margin: 20px;
-    border-radius: 20px;
-}
-.about img{
-    float: left;
-    width: 32%;
-    border: 4px solid #C03832;
-    margin: 0px 20px 0px 20px;
-}
-.about h2{
-    display: block;
-    color: #C03832;
-    text-align: center;
-    padding-top: 20px;
-}
-.about p{
-    display:inline-block;
-    width: 60%;
-}
-
-#contactpgheader {
+#cpgheader{
     padding-left: 40px;
 }
 
-.FAQimg img {
+.FAQimg img{
     border: 5px solid #C03832;
     width: 50%;
     margin-top: 20px;
@@ -192,7 +171,7 @@ ul {
 }
 
 
-.footer p {
+.footer p{
     width: 30%;
     display: inline-block;
 }
@@ -212,35 +191,25 @@ ul {
     border: 5px solid #C03832;
 }
 
-/* Contact Form */
 
-#contactform {
-    width: 75%;
-    padding: 20px 40px 20px 40px;
-    border-radius: 20px;
-    background-color: #FFFFFF85;
-    font-size: 18px;
-    margin: 0px 20px 20px 20px;
-}
-
-.pbottom {
+.pbottom{
     margin-top: 500px;
 }
 
 /* Footer */
 
-.footer {
+.footer{
     background-color: #2A53A2;
     color: #FFFFFF;
     text-align: center;
 }
 
-.footer h2 {
+.footer h2{
     padding-top: 20px;
     text-transform: uppercase;
 }
 
-.footer p {
+.footer p{
     width: 30%;
     display: inline-block;
 }
