revise home about php and css

--- a/css/barbill.css
+++ b/css/barbill.css
@@ -1,22 +1,20 @@
 /* Google font assignment */
 
-body {
+body{
     font-family: "Oswald", sans-serif;
     background-color: #2A53A280;
 }
 
 /* Header  Logo and Navigation Bar Links */
 
-header {
+header{
     background-color: #2A53A2;
-    position: fixed;
-    top: 0;
     text-align: center;
-    width: 100%
+    width: 100%;
 }
 
-ul {
-    width: 50%;
+ul{
+    width:;
     padding: 20px 40px 20px 40px;
     border-radius: 20px;
     background-color: #FFFFFF85;
@@ -24,21 +22,21 @@ ul {
     margin: 0px 20px 20px 20px;
 }
 
-#logo {
+#logo{
     display: inline-block;
     width: 10%;
     padding: 20px 30px 20px 0px;
     vertical-align: middle;
 }
 
-h1 {
+h1{
     display: inline-block;
     font-weight: bold;
     color: #FFFFFF;
     text-transform: uppercase;
 }
 
-.navlink {
+.navlink{
     display: inline-block;
     width: 12%;
     padding: 15px;
@@ -50,87 +48,10 @@ h1 {
     text-transform: uppercase;
     margin: 0px 10px 25px 0px;
 }
-
-.navlink:hover {
+.navlink:hover{
     background-color: #C03832;
 }
-
-.contactform {
-    width: 75%;
-    padding: 20px 40px 20px 40px;
-    border-radius: 20px;
-    background-color: #FFFFFF85;
-    font-size: 18px;
-    margin: 0px 20px 20px 20px;
-}
-
-/* Home Page */
-
-#homephoto, #contactphoto {
-    display: block;
-    width: max-content;
-    padding-top: 100px;
-    margin: auto;
-}
-
-.reservation {
-    background-color: #FFFFFF85;
-    border-radius: 20px;
-    margin: auto;
-    width: 90%;
-}
-
-.reservation h2 {
-    text-align: center;
-    color: #C03832;
-    padding-top: 20px;
-    text-transform: uppercase;
-}
-
-.reservation h3 {
-    text-align: center;
-}
-
-.location {
-    text-align: center;
-}
-
-.location img {
-    border: 5px solid #C03832;
-    width: 40%;
-    margin: 0px 10px 0px 10px;
-}
-
-.location p {
-    display: inline-block;
-    vertical-align: top;
-    width: 45%;
-}
-
-/* FAQ Lists */
-
-ul {
-    width: 75%;
-    padding: 20px 40px 20px 40px;
-    border-radius: 20px;
-    background-color: #FFFFFF85;
-    font-size: 18px;
-    margin: 0px 20px 20px 20px;
-}
-
-.contactform .cf-group {
-    padding-bottom: 15px;
-}
-
-.contactform label {
-    display: block;
-}
-
-.contactform .cf-group input[type="text"], .cf-group textarea {
-    padding: 4px;
-}
-
-.button {
+.button{
     background-color: #2A53A2;
     color: #fff;
     font-family: "Oswald", sans-serif;
@@ -139,57 +60,40 @@ ul {
     border: none;
     margin: 20px 10px 25px 0px;
 }
-
-.button:hover {
+.button:hover{
     background-color: #C03832;
 }
-
-.FAQ h2 {
-    padding-left: 40px;
+.pbottom{
+    margin-top: 500px;
+}
+.footer p{
+    width: 30%;
+    display: inline-block;
 }
 
-/*can we merge these two tags?*/
+/* Social Media */
 
-#contactpgheader {
-    padding-left: 40px;
-}
 
-.FAQimg img {
-    border: 5px solid #C03832;
-    width: 50%;
-    margin-top: 20px;
-    margin-left: 40px;
-}
 
-/* Contact Form */
-
-#contactform {
-    width: 75%;
-    padding: 20px 40px 20px 40px;
-    border-radius: 20px;
-    background-color: #FFFFFF85;
-    font-size: 18px;
-    margin: 0px 20px 20px 20px;
-}
-
-.pbottom {
+.pbottom{
     margin-top: 500px;
 }
 
 /* Footer */
 
-.footer {
+.footer{
     background-color: #2A53A2;
     color: #FFFFFF;
     text-align: center;
 }
 
-.footer h2 {
+.footer h2{
     padding-top: 20px;
     text-transform: uppercase;
 }
 
-.footer p {
+.footer p{
     width: 30%;
     display: inline-block;
 }
+
