--- a/css/contact.css
+++ b/css/contact.css
@@ -12,6 +12,16 @@
     margin: auto;
     margin-top: 20px;
 }
+#CUH{
+    color: #C03832;
+    width: 25%;
+    padding: 20px 20px 20px 20px;
+    border-radius: 20px;
+    background-color: #FFFFFF85;
+    margin: 20px 25px;
+    text-align: center;
+    font-size: 20px;
+}
 .contactform .cf-group{
     padding-bottom: 15px;
 }
