--- a/css/socialmedia.css
+++ b/css/socialmedia.css
@@ -1,7 +1,17 @@
 #SMpage{
-    margin: auto;
-    padding: 10px 10px;
+    margin: none;
+    padding: none;
     overflow: hidden;
+}
+#SMH{
+    color: #C03832;
+    width: 25%;
+    padding: 20px 20px 20px 20px;
+    border-radius: 20px;
+    background-color: #FFFFFF85;
+    margin: 20px 25px;
+    text-align: center;
+    font-size: 20px;
 }
 #SMFace, #SMInsta, #SMTwitter{
     float: left;
