ticket 25 clean up issues

--- a/css/contact.css
+++ b/css/contact.css
@@ -5,7 +5,7 @@
 
 .contactform{
     width: 75%;
-    padding: 20px 40px 20px 40px;
+    padding: 20px 40px;
     border-radius: 20px;
     background-color: #FFFFFF85;
     font-size: 18px;
