--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -24,7 +24,7 @@
 .about p{
     width: 90%;
     margin: auto;
-    padding: 5px auto;
+    padding: 5px 0px;
 }
 .firsttime{
     background-color: #C03832;
