--- a/css/home.css
+++ b/css/home.css
@@ -6,14 +6,14 @@
 #homephoto{
 
     display: block;
-    margin: auto;
+    margin: 0px auto 20px;
     max-width: 100%;
     height: auto;
 }
 .reservation{
     background-color: #FFFFFF85;
     border-radius: 20px;
-    margin: auto;
+    margin: 0px auto 20px;
     width: 90%;
 }
 .reservation h2{
