--- a/css/menu.css
+++ b/css/menu.css
@@ -17,7 +17,7 @@
 .menu {
     background-color: #FFFFFF85;
     border-radius: 20px;
-    margin: auto;
+    margin: 0px auto 20px;
     width: 90%;
 }
 
