--- a/css/faq.css
+++ b/css/faq.css
@@ -1,40 +1,26 @@
-.mainfaq {
-    margin-top: 260px;
-    height: auto;
-} 
 
-#FAQtitle{
+.FAQtitle{
     color: #C03832;
-    width: 25%;
-    padding: 20px 20px 20px 20px;
-    border-radius: 20px;
+    padding: 20px 40px 20px 40px;
     background-color: #FFFFFF85;
-    margin: 20px 25px;
-    text-align: center;
-    font-size: 20px;
 }
-ul{
+.FAQ ul{
     width:auto;
     padding: 20px 40px 20px 40px;
     border-radius: 20px;
     background-color: #FFFFFF85;
     font-size: 18px;
-    margin: 0px 20px 20px 20px;
 }
 .FAQ h2{
     color: #C03832
 }
 .FAQ{
-    width: 75%;
-    padding: 20px 40px 20px 40px;
-    border-radius: 20px;
     background-color: #FFFFFF85;
     font-size: 18px;
-    margin: 0px 20px 20px 25px;
 }
 .FAQimg img{
     border: 5px solid #C03832;
-    width: 50%;
-    margin-top: 20px;
-    margin-left: 40px;
+}
+.col{
+    border-radius: 20px;
 }
