--- a/css/merch.css
+++ b/css/merch.css
@@ -1,6 +1,5 @@
 .card-img-top {
-    
-    width: 320px; /* You can set the dimensions to whatever you want */
+    width: 320px; 
     height: 200px;
     object-fit: cover;
 }
@@ -8,4 +7,15 @@
     width:100%;
     height:300px;
     object-fit: cover;
+}
+h2{
+    color: #C03832;
+    padding: 20px 40px 20px 40px;
+    background-color: #FFFFFF85;
+    width: fit-content;
+    border-radius: 20px;
+}
+.card {
+    min-height: 350px;
+    background-color:  #c2d1ef;
 }
