--- a/css/merch.css
+++ b/css/merch.css
@@ -1,3 +1,4 @@
+
 .card-img-top {
     width: 320px; 
     height: 200px;
@@ -8,7 +9,10 @@
     height:300px;
     object-fit: cover;
 }
-h2{
+#headerimg, .card-title{
+    color: #C03832
+}
+.merch-title{
     color: #C03832;
     padding: 20px 40px 20px 40px;
     background-color: #FFFFFF85;
@@ -18,4 +22,8 @@ h2{
 .card {
     min-height: 350px;
     background-color:  #c2d1ef;
+}
+.card-img-top.card-order{
+    width: 100%;
+    height: max-content;
 }
