--- a/css/press.css
+++ b/css/press.css
@@ -10,7 +10,7 @@ a .card:hover {
     font-family: "Oswald", sans-serif;
     font-size: 50px;
 }
-p{
+.card-text{
     width: 50%;
     font-size: 30px;
 }
