--- a/css/barbill.css
+++ b/css/barbill.css
@@ -119,15 +119,13 @@ h1 {
 }
 
 .footer h2 {
-    padding-top: 20px;
+    padding-top: 1%;
     text-transform: uppercase;
     color: white;
 }
 
 .footer p {
     color: #fff;
-    width: 30%;
-    display: inline-block;
 }
 
 .container-fluid {
