Consolidate CSS for Home About Us Menu

--- a/css/bb_style.css
+++ b/css/bb_style.css
@@ -140,61 +140,86 @@ h1 {
 	text-decoration: none;
 }
 
-/* Menu Pages */
-#menuheader {
-    background-color: #FFFFFF85;
-    width: 30%;
-    border-radius: 20px;
-    padding: 20px 20px 20px 20px;
-    margin: 20px 60px;
-    color: #C03832;
-    text-align: center;
-    text-transform: uppercase;
+/* Home */
+
+.reservation {
+	background-color: #FFFFFF85;
+	border-radius: 20px;
+	margin: 0px auto 20px;
+	width: 90%;
 }
 
-.to {
-    background-color: #C03832;
-    width: 90%;
-    border-radius: 20px;
-    padding: 2%;
-    color: #FFFFFF;
-    margin-bottom: 20px;
+.reservation h2 {
+	text-align: center;
+	color: #C03832;
+	padding-top: 20px;
+	text-transform: uppercase;
 }
 
-.to h3 {
-    text-align: center;
-    text-transform: uppercase;
+.reservation h3 {
+	text-align: center;
+	margin: auto 5%;
 }
 
-.menu {
-    background-color: #FFFFFF85;
-    border-radius: 20px;
-    margin: 0px auto 20px;
-    width: 90%;
+.home_img {
+	display: block;
+	border: 5px solid #C03832;
+	width: 75%;
+	margin: 2%;
 }
 
-.menu h2 {
-    color: #C03832;
-    text-align: center;
-    text-transform: uppercase;
-    padding: 20px 0px 20px 0px;
+.home_p {
+	display: inline-block;
+	vertical-align: top;
+	width: 100%;
+	margin: 2%;
 }
 
-.salad {
-    display: inline-block;
-    vertical-align: top;
-    width: 45%;
-    margin-left: 5%;
+/* About Us */
+
+.about {
+	background-color: #FFFFFF85;
+	border-radius: 20px;
+	width: 90%;
+	margin: auto;
 }
 
-.col img {
-    display: inline-block;
-    vertical-align: top;
-    margin: 0% 0% 5% 15%;
+.about h2 {
+	text-align: center;
+	color: #C03832;
+	padding-top: 20px;
+	text-transform: uppercase;
 }
 
-.col p {
-    display: inline-block;
-    vertical-align: top;
-    width: 90%;
+.about img {
+	border: 5px solid #C03832;
+	display: block;
+	margin: auto;
+	width: 90%;
+}
+
+.about p {
+	width: 90%;
+	margin: auto;
+	padding: 5px 0px;
+}
+
+.firsttime {
+	background-color: #C03832;
+	text-align: center;
+	margin: auto;
+	border-radius: 20px;
+	width: 90%;
+}
+
+.firsttime h2 {
+	color: #FFFFFF;
+	text-transform: uppercase;
+	padding-top: 20px;
+}
+
+.firsttime p {
+	color: #FFFFFF;
+	width: 90%;
+	margin: auto;
 }
